--- a/popup.html
+++ b/popup.html
@@ -88,30 +88,30 @@ box-shadow: 13px 62px 82px -29px rgba(0,0,0,1);
     </div>
     <label>
       <input type="radio" name="reactions" value="like" id="like" onclick="handleClick()" />
-      <img src="like.png" class="like_css">
+      <img src="reactionsImages/like.png" class="like_css">
     </label>
     <label>
       <input type="radio" name="reactions" value="love" id="love" onclick="handleClick()"/>
-      <img src="love.png" class="love_css">
+      <img src="reactionsImages/love.png" class="love_css">
     </label>
     <label>
       <input type="radio" name="reactions" value="haha" id="haha"onclick="handleClick()"/>
-      <img src="haha.png" class="haha_css">
+      <img src="reactionsImages/haha.png" class="haha_css">
     </label>
     <label>
       <input type="radio" name="reactions" value="wow" id="wow" onclick="handleClick()"/>
-      <img src="wow.png" class="wow_css">
+      <img src="reactionsImages/wow.png" class="wow_css">
     </label>
     <label>
       <input type="radio" name="reactions" value="sad" id="sad" onclick="handleClick()"/>
-      <img src="sad.png" class="sad_css">
+      <img src="reactionsImages/sad.png" class="sad_css">
     </label>
     <label>
       <input type="radio" name="reactions" value="angry" id="angry" onclick="handleClick()"/>
-      <img src="angry.png" class="angry_css">
+      <img src="reactionsImages/angry.png" class="angry_css">
     </label>
     <p id="output" class="output_css">
-    notjing
+    nothing
     </p>
   </body>
 </html>
