used wrong directory name earlier, used reactionsImages instead of reactionImages in img src

--- a/popup.html
+++ b/popup.html
@@ -88,27 +88,27 @@ box-shadow: 13px 62px 82px -29px rgba(0,0,0,1);
     </div>
     <label>
       <input type="radio" name="reactions" value="like" id="like" onclick="handleClick()" />
-      <img src="reactionsImages/like.png" class="like_css">
+      <img src="reactionImages/like.png" class="like_css">
     </label>
     <label>
       <input type="radio" name="reactions" value="love" id="love" onclick="handleClick()"/>
-      <img src="reactionsImages/love.png" class="love_css">
+      <img src="reactionImages/love.png" class="love_css">
     </label>
     <label>
       <input type="radio" name="reactions" value="haha" id="haha"onclick="handleClick()"/>
-      <img src="reactionsImages/haha.png" class="haha_css">
+      <img src="reactionImages/haha.png" class="haha_css">
     </label>
     <label>
       <input type="radio" name="reactions" value="wow" id="wow" onclick="handleClick()"/>
-      <img src="reactionsImages/wow.png" class="wow_css">
+      <img src="reactionImages/wow.png" class="wow_css">
     </label>
     <label>
       <input type="radio" name="reactions" value="sad" id="sad" onclick="handleClick()"/>
-      <img src="reactionsImages/sad.png" class="sad_css">
+      <img src="reactionImages/sad.png" class="sad_css">
     </label>
     <label>
       <input type="radio" name="reactions" value="angry" id="angry" onclick="handleClick()"/>
-      <img src="reactionsImages/angry.png" class="angry_css">
+      <img src="reactionImages/angry.png" class="angry_css">
     </label>
     <p id="output" class="output_css">
     nothing
