--- a/popup.html
+++ b/popup.html
@@ -110,9 +110,14 @@ box-shadow: 13px 62px 82px -29px rgba(0,0,0,1);
       <input type="radio" name="reactions" value="angry" id="angry" onclick="handleClick()"/>
       <img src="reactionImages/angry.png" class="angry_css">
     </label>
-    <p id="output" class="output_css">
+    <p id="outputReacted" class="output_css">
     nothing
     </p>
+   
+   <p id="outputURL" class="output_css">
+    
+    </p>
+   
   </body>
 </html>
 
