--- a/popup.html
+++ b/popup.html
@@ -60,9 +60,9 @@
       label > input:checked + img{ /* (RADIO CHECKED) IMAGE STYLES */
        /* border:2px solid #f00;*/
         width:130px;
-     -webkit-box-shadow: 13px 62px 82px -29px rgba(0,0,0,1);
--moz-box-shadow: 13px 62px 82px -29px rgba(0,0,0,1);
-box-shadow: 13px 62px 82px -29px rgba(0,0,0,1);
+       -webkit-box-shadow: 13px 62px 82px -29px rgba(0,0,0,1);
+       -moz-box-shadow: 13px 62px 82px -29px rgba(0,0,0,1);
+       box-shadow: 13px 62px 82px -29px rgba(0,0,0,1);
       }
       label > input:hover + img{ /* (RADIO CHECKED) IMAGE STYLES */
        /* border:2px solid #f00;*/
@@ -112,12 +112,9 @@ box-shadow: 13px 62px 82px -29px rgba(0,0,0,1);
     </label>
    
    
-   <p id="outputURL" class="output_css">
+   <p id="output" class="output_css">
     
-    </p>
-    <p id="outputReacted" class="output_css">
-    nothing
-    </p>
+   </p>
    
   </body>
 </html>
